--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
       <nav class= "navbar navbar-expand-lg bg-dark navbar-dark"> 
         <a href="#" class="navbar-brand">TrendyX</a>
+        <a href="#"class="navbar-brand">Create New Post</a>
+        <a href="#"class="navbar-brand">News Feed</a>
+        <a href="#"class="navbar-brand">Search</a>
+        <a href="#"class="navbar-brand">Logout</a>
 
       </nav>
     
