--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
                 <div class="bg-white border mt-2">
                     <div>
                         <div class="d-flex flex-row justify-content-between align-items-center p-2 border-bottom">
-                                    <img src="" alt="">
-                            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="" width="45">
-                                <div class="d-flex flex-column flex-wrap ml-2"><span class="font-weight-bold">Pyramid Guy</span><span class="text-black-50 time">40 minutes ago</span></div>
+                            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="https://i.imgur.com/aoKusnD.jpg" width="45">
+                                <div class="d-flex flex-column flex-wrap ml-2"><span class="font-weight-bold">Thomson ben</span><span class="text-black-50 time">40 minutes ago</span></div>
                             </div>
                             <div class="feed-icon px-2"><i class="fa fa-ellipsis-v text-black-50"></i></div>
                         </div>
@@ -45,24 +44,19 @@
                 <div class="bg-white border mt-2">
                     <div>
                         <div class="d-flex flex-row justify-content-between align-items-center p-2 border-bottom">
-                            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="https://www.deviantart.com/tag/ginger" width="45">
-                                <div class="d-flex flex-column flex-wrap ml-2"><span class="font-weight-bold">Ginger Girl</span><span class="text-black-50 time">40 minutes ago</span></div>
+                            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="https://i.imgur.com/aoKusnD.jpg" width="45">
+                                <div class="d-flex flex-column flex-wrap ml-2"><span class="font-weight-bold">Thomson ben</span><span class="text-black-50 time">40 minutes ago</span></div>
                             </div>
                             <div class="feed-icon px-2"><i class="fa fa-ellipsis-v text-black-50"></i></div>
                         </div>
                     </div>
-                    <div class="feed-image p-2 px-3"><img class="img-fluid img-responsive" src="https://www.deviantart.com/tag/ginger"></div>
+                    <div class="feed-image p-2 px-3"><img class="img-fluid img-responsive" src="https://i.imgur.com/aoKusnD.jpg"></div>
                     <div class="d-flex justify-content-end socials p-2 py-3"><i class="fa fa-thumbs-up"></i><i class="fa fa-comments-o"></i><i class="fa fa-share"></i></div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-    
-
-
-
-
 
 
   
