--- a/feedsec.html
+++ b/feedsec.html
@@ -4,9 +4,20 @@
 <link href="https://fonts.googleapis.com/css?family=Ropa+Sans" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+     <link rel="stylesheet" href="feed.css">
 </head>
 
 <body>
+
+     <nav class= "navbar navbar-expand-lg bg-dark navbar-dark"> 
+        <a href="#" class="navbar-brand">TrendyX</a>
+        <a href="#"class="navbar-brand">Create New Post</a>
+        <a href="#"class="navbar-brand">News Feed</a>
+        <a href="#"class="navbar-brand">Search</a>
+        <a href="#"class="navbar-brand">Logout</a>
+
+      </nav>
+
 <div class="container main-section border">
 <div class="row">
 <div class="col-lg-12 col-sm-12 col-12">
