--- a/signin.html
+++ b/signin.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="signin.css">
     <title>Sign In</title>
 </head>
 <body>
+
+     <nav class= "navbar navbar-expand-lg bg-dark navbar-dark"> 
+        <a href="#" class="navbar-brand">TrendyX</a>
+        <a href="#"class="navbar-brand">Create New Post</a>
+        <a href="#"class="navbar-brand">News Feed</a>
+        <a href="#"class="navbar-brand">Search</a>
+        <a href="#"class="navbar-brand">Logout</a>
+
+      </nav>
     <h1>Login Here</h1>
 
     <img src="https://cdn.skedsocial.com/app/uploads/2021/08/03140952/jan-baborak-ZKOwF_J-3rw-unsplash-scaled-1-600x360.jpg" alt="Image of Hashtag Symbol">
@@ -25,6 +36,6 @@
 
         <button>Sign In</button>
 </form>
-    
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>   
 </body>
 </html>
