--- a/signin.html
+++ b/signin.html
@@ -34,7 +34,7 @@
         <input id = password type="password" name="password">
         </p>
 
-        <button>Sign In</button>
+        <button class="button">Sign In</button>
 </form>
  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>   
 </body>
