--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 </head>
 
 <body>
-      <nav class= "navbar navbar-expand-lg bg-dark navbar-dark"> 
-        <a href="#" class="navbar-brand">TrendyX</a>
-        <a href="#"class="navbar-brand">Create New Post</a>
-        <a href="#"class="navbar-brand">News Feed</a>
-        <a href="#"class="navbar-brand">Search</a>
-        <a href="#"class="navbar-brand">Logout</a>
-
+    <nav class= "navbar navbar-expand-lg bg-dark navbar-dark"> 
+      <a href="feedsec.html" class="navbar-brand">TrendyX</a>
+        <a href="index.html"class="navbar-brand">Create New Post</a>
+        <a href="feedsec.html"class="navbar-brand">News Feed</a>
+        <a href="signup.html"class="navbar-brand">Trendy Sign Up</a>
+        <a href="signin.html"class="navbar-brand">Logout</a>
       </nav>
 
       <div class="container mt-4 mb-5">
