--- a/signin.html
+++ b/signin.html
@@ -11,17 +11,17 @@
 <body>
 
      <nav class= "navbar navbar-expand-lg bg-dark navbar-dark"> 
-        <a href="#" class="navbar-brand">TrendyX</a>
-        <a href="#"class="navbar-brand">Create New Post</a>
-        <a href="#"class="navbar-brand">News Feed</a>
-        <a href="#"class="navbar-brand">Search</a>
-        <a href="#"class="navbar-brand">Logout</a>
+        <a href="feedsec.html" class="navbar-brand">TrendyX</a>
+        <a href="index.html"class="navbar-brand">Create New Post</a>
+        <a href="feedsec.html"class="navbar-brand">News Feed</a>
+        <a href="signup.html"class="navbar-brand">Trendy Sign Up</a>
+        <a href="signin.html"class="navbar-brand">Logout</a>
 
       </nav>
     <h1>Login Here</h1>
 
     <img src="https://cdn.skedsocial.com/app/uploads/2021/08/03140952/jan-baborak-ZKOwF_J-3rw-unsplash-scaled-1-600x360.jpg" alt="Image of Hashtag Symbol">
-<form action="">
+<form action="file:///Users/dj/Documents/TrendyX/TrendyX/feedsec.html">
 
 <p>
             <label for="username">Enter Username:</label>
