--- a/feedsec.html
+++ b/feedsec.html
@@ -26,7 +26,7 @@
 <img src="https://dummyimage.com/150x150/5a5a5a/ffffff" class="img-thumbnail" width="150px">
 </div>
 <div class="col-lg-10 col-sm-10 col-7">
-<h4 class="text-primary">Create New Post</h4>
+<h4 class="text-primary">Living the Life</h4>
 <p>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -44,21 +44,21 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 <img src="https://dummyimage.com/20x20/a8a1a8/0f0f12" class="rounded-circle" width="20px"> <span>by</span> <span class="text-info">Lisa</span>
 </li>
 <li class="list-inline-item">
-<i class="fa fa-calendar" aria-hidden="true"></i> <span>Sept 16th,2017</span>
+<i class="fa fa-calendar" aria-hidden="true"></i> <span>Sept 15th,2017</span>
 </li>
 <li class="list-inline-item">
-<i class="fa fa-comment" aria-hidden="true"></i> <span class="text-info">3 Comments</span>
+<i class="fa fa-comment" aria-hidden="true"></i> <span class="text-info">5 Comments</span>
 </li>
 <li class="list-inline-item">
-<i class="fa fa-share-square-o" aria-hidden="true"></i> <span class="text-info">39 Shares</span>
+<i class="fa fa-share-square-o" aria-hidden="true"></i> <span class="text-info">50 Shares</span>
 </li>
 <li class="list-inline-item">
 <i class="fa fa-tags" aria-hidden="true"></i>
-<span>Tags:</span>
-<span class="badge badge-dark">bootstrap 4.0</span>
-<span class="badge badge-dark">laravel</span>
-<span class="badge badge-dark">html</span>
-<span class="badge badge-dark">css</span>
+<span>Interact</span>
+<span class="badge badge-dark">Like</span>
+<span class="badge badge-dark">Share</span>
+
+
 </li>
 </ul>
 </div>
@@ -73,7 +73,7 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 <img src="https://dummyimage.com/150x150/5a5a5a/ffffff" class="img-thumbnail" width="150px">
 </div>
 <div class="col-lg-10 col-sm-10 col-7">
-<h4 class="text-primary">Post Title</h4>
+<h4 class="text-primary">Twitter Treason</h4>
 <p>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -101,11 +101,10 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 </li>
 <li class="list-inline-item">
 <i class="fa fa-tags" aria-hidden="true"></i>
-<span>Tags:</span>
-<span class="badge badge-dark">bootstrap 4.0</span>
-<span class="badge badge-dark">laravel</span>
-<span class="badge badge-dark">html</span>
-<span class="badge badge-dark">css</span>
+<span>Interact</span>
+<span class="badge badge-dark">Like</span>
+<span class="badge badge-dark">Share</span>
+
 </li>
 </ul>
 </div>
@@ -120,7 +119,7 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 <img src="https://dummyimage.com/150x150/5a5a5a/ffffff" class="img-thumbnail" width="150px">
 </div>
 <div class="col-lg-10 col-sm-10 col-7">
-<h4 class="text-primary">Post Title</h4>
+<h4 class="text-primary">Crazy Post</h4>
 <p>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -148,11 +147,10 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 </li>
 <li class="list-inline-item">
 <i class="fa fa-tags" aria-hidden="true"></i>
-<span>Tags:</span>
-<span class="badge badge-dark">bootstrap 4.0</span>
-<span class="badge badge-dark">laravel</span>
-<span class="badge badge-dark">html</span>
-<span class="badge badge-dark">css</span>
+<span>Interact</span>
+<span class="badge badge-dark">Like</span>
+<span class="badge badge-dark">Share</span>
+
 </li>
 </ul>
 </div>
