--- a/signin.html
+++ b/signin.html
@@ -18,9 +18,11 @@
         <a href="signin.html"class="navbar-brand">Logout</a>
 
       </nav>
+      
+      <p>
     <h1>Login Here</h1>
-
-    <img src="https://cdn.skedsocial.com/app/uploads/2021/08/03140952/jan-baborak-ZKOwF_J-3rw-unsplash-scaled-1-600x360.jpg" alt="Image of Hashtag Symbol">
+      </p>
+    <img class="img" src="https://cdn.skedsocial.com/app/uploads/2021/08/03140952/jan-baborak-ZKOwF_J-3rw-unsplash-scaled-1-600x360.jpg" alt="Image of Hashtag Symbol">
 <form action="file:///Users/dj/Documents/TrendyX/TrendyX/feedsec.html">
 
 <p>
