--- a/signup.html
+++ b/signup.html
@@ -43,7 +43,7 @@
             <label for="use">How will you be using this account ?</label>
             <input id = use type="text" name="use">
         </p>
-        <button>Create Account</button>
+        <button class="button">Create Account</button>
     </form>
     
 </body>
