--- a/feedsec.html
+++ b/feedsec.html
@@ -18,6 +18,7 @@
         <a href="signin.html"class="navbar-brand">Logout</a>
       </nav>
 
+      
 <div class="container main-section border">
 <div class="row">
 <div class="col-lg-12 col-sm-12 col-12">
@@ -73,6 +74,10 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 <img src="https://dummyimage.com/150x150/5a5a5a/ffffff" class="img-thumbnail" width="150px">
 </div>
 <div class="col-lg-10 col-sm-10 col-7">
+
+
+
+<section>
 <h4 class="text-primary">Twitter Treason</h4>
 <p>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -119,6 +124,10 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 <img src="https://dummyimage.com/150x150/5a5a5a/ffffff" class="img-thumbnail" width="150px">
 </div>
 <div class="col-lg-10 col-sm-10 col-7">
+
+</section>
+
+<section>
 <h4 class="text-primary">Crazy Post</h4>
 <p>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -158,5 +167,6 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 </div>
 </div>
 </div>
+</section>
 </body>
 </html>
