--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
 
     <h1>Create Your Trendy X Account</h1>
 
-    <form action="">
+    <form action="///Users/dj/Documents/TrendyX/TrendyX/thankyou.html">
         <p>
             <label for= "firstname">First Name:</label>
             <input id= "firstname" type="text" name="firstname">
