making post lines distinctive

--- a/feedsec.html
+++ b/feedsec.html
@@ -27,7 +27,7 @@
 <img src="https://dummyimage.com/150x150/5a5a5a/ffffff" class="img-thumbnail" width="150px">
 </div>
 <div class="col-lg-10 col-sm-10 col-7">
-<h4 class="text-primary">Living the Life</h4>
+<h4 class="text-primary" id="text-secondary">Living the Life</h4>
 <br>
 <p>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
