--- a/feedsec.html
+++ b/feedsec.html
@@ -27,7 +27,7 @@
 <img src="https://dummyimage.com/150x150/5a5a5a/ffffff" class="img-thumbnail" width="150px">
 </div>
 <div class="col-lg-10 col-sm-10 col-7">
-<h4 class="text-primary" id="text-secondary">Living the Life</h4>
+<h4 class="text" >Living the Life</h4>
 <br>
 <p>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -79,7 +79,7 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 
 
 <section>
-<h4 class="text-primary">Twitter Treason</h4>
+<h4 class="text">Twitter Treason</h4>
 <p>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -129,7 +129,7 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 </section>
 
 <section>
-<h4 class="text-primary">Crazy Post</h4>
+<h4 class="text">Crazy Post</h4>
 <p>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
