--- a/signin.html
+++ b/signin.html
@@ -12,10 +12,10 @@
 
      <nav class= "navbar navbar-expand-lg bg-dark navbar-dark"> 
         <a href="" class="navbar-brand">TrendyX</a>
-        <a href=""class="navbar-brand">Create New Post</a>
+        <!-- <a href=""class="navbar-brand">Create New Post</a>
         <a href=""class="navbar-brand">News Feed</a>
         <a href="signup.html"class="navbar-brand">Trendy Sign Up</a>
-        <a href="signin.html"class="navbar-brand">Logout</a>
+        <a href="signin.html"class="navbar-brand">Logout</a> -->
 
       </nav>
       
