--- a/feedsec.html
+++ b/feedsec.html
@@ -12,13 +12,14 @@
     
 <nav class= "navbar navbar-expand-lg bg-dark navbar-dark"> 
       <a href="feedsec.html" class="navbar-brand">TrendyX</a>
-        <a href="index.html"class="navbar-brand">Create New Post</a>
         <a href="feedsec.html"class="navbar-brand">News Feed</a>
         <a href="signup.html"class="navbar-brand">Trendy Sign Up</a>
         <a href="signin.html"class="navbar-brand">Logout</a>
       </nav>
 
-      
+<div>
+  <button = class="btn btn-sm btn-dark">Create New Post</button>
+</div>  
 <div class="container main-section border">
 <div class="row">
 <div class="col-lg-12 col-sm-12 col-12">
