--- a/feedsec.html
+++ b/feedsec.html
@@ -17,10 +17,15 @@
         <a href="signin.html"class="navbar-brand">Logout</a>
       </nav>
 
-<div>
-  <button = class="btn btn-sm btn-dark">Create New Post</button>
-</div>  
-<div class="container main-section border">
+
+
+  
+  <button  id = pbutton class="btn btn-sm btn-dark">Create New Post</button>
+
+ 
+
+<br>
+<div class="container main-section">
 <div class="row">
 <div class="col-lg-12 col-sm-12 col-12">
 <div class="row">
