adding sign up functionality to sign up page

--- a/signin.html
+++ b/signin.html
@@ -37,7 +37,10 @@
         </p>
 
         <button class="button">Sign In</button>
-        <button class="button2">Sign Up</button>
+        <form class= "button2"action="///Users/dj/Documents/TrendyX/TrendyX/signup.html"
+    <input type="button"><button>Sign Up</button>
+  </form>
+        
 </form>
  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>  
  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+30JU5yEx1q6GSYGSHk7tPXikyn57ogEvDej/m4=" crossorigin="anonymous"></script>
