--- a/feedsec.html
+++ b/feedsec.html
@@ -13,25 +13,17 @@
 <nav class= "navbar navbar-expand-lg bg-dark navbar-dark"> 
       <a href="feedsec.html" class="navbar-brand">TrendyX</a>
         <a href="feedsec.html"class="navbar-brand">News Feed</a>
-        <a href="signup.html"class="navbar-brand">Trendy Sign Up</a>
+<!--<a href="signup.html"class="navbar-brand">Trendy Sign Up</a>-->
         <a href="signin.html"class="navbar-brand">Logout</a>
       </nav>
 
 
 
-  
-<button  id = pbutton class="btn btn-sm btn-dark">Create New Post</button>
-  
- 
-
-<br>
 <div class="container main-section">
 <div class="row">
 <div class="col-lg-12 col-sm-12 col-12">
 <div class="row">
-<div class="col-lg-2 col-sm-2 col-5">
-<img src="https://dummyimage.com/150x150/5a5a5a/ffffff" class="img-thumbnail" width="150px">
-</div>
+
 <div class="col-lg-10 col-sm-10 col-7">
 <h4 class="text" >Living the Life</h4>
 <br>
@@ -42,33 +34,14 @@ quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 </p>
-<button class="btn btn-sm btn-dark">Read more</button>
+<button  id = "pbtn" class="btn btn-sm btn-dark">Create New Post</button>
+<button id = "editbtn"class="btn btn-sm btn-dark">Edit Post</button>
+<button id="deletebtn" class="btn btn-sm btn-dark">Delete Post</button>
 </div>
 </div>
 <div class="row post-detail">
 <div class="col-lg-12 col-sm-12 col-12">
-<ul class="list-inline">
-<li class="list-inline-item">
-<img src="https://dummyimage.com/20x20/a8a1a8/0f0f12" class="rounded-circle" width="20px"> <span>by</span> <span class="text-info">Lisa</span>
-</li>
-<li class="list-inline-item">
-<i class="fa fa-calendar" aria-hidden="true"></i> <span>Sept 15th,2017</span>
-</li>
-<li class="list-inline-item">
-<i class="fa fa-comment" aria-hidden="true"></i> <span class="text-info">5 Comments</span>
-</li>
-<li class="list-inline-item">
-<i class="fa fa-share-square-o" aria-hidden="true"></i> <span class="text-info">50 Shares</span>
-</li>
-<li class="list-inline-item">
-<i class="fa fa-tags" aria-hidden="true"></i>
-<span>Interact</span>
-<span class="badge badge-dark">Like</span>
-<span class="badge badge-dark">Share</span>
 
-
-</li>
-</ul>
 </div>
 </div>
 </div>
@@ -77,9 +50,7 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 <div class="row">
 <div class="col-lg-12 col-sm-12 col-12">
 <div class="row">
-<div class="col-lg-2 col-sm-2 col-5">
-<img src="https://dummyimage.com/150x150/5a5a5a/ffffff" class="img-thumbnail" width="150px">
-</div>
+
 <div class="col-lg-10 col-sm-10 col-7">
 
 
@@ -93,32 +64,14 @@ quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 </p>
-<button class="btn btn-sm btn-dark">Read more</button>
+<button  id = "pbtn" class="btn btn-sm btn-dark">Create New Post</button>
+<button id = "editbtn"class="btn btn-sm btn-dark">Edit Post</button>
+<button id = "deletebtn" class="btn btn-sm btn-dark">Delete Post</button>
 </div>
 </div>
 <div class="row post-detail">
 <div class="col-lg-12 col-sm-12 col-12">
-<ul class="list-inline">
-<li class="list-inline-item">
-<img src="https://dummyimage.com/20x20/a8a1a8/0f0f12" class="rounded-circle" width="20px"> <span>by</span> <span class="text-info">Lisa</span>
-</li>
-<li class="list-inline-item">
-<i class="fa fa-calendar" aria-hidden="true"></i> <span>Sept 16th,2017</span>
-</li>
-<li class="list-inline-item">
-<i class="fa fa-comment" aria-hidden="true"></i> <span class="text-info">3 Comments</span>
-</li>
-<li class="list-inline-item">
-<i class="fa fa-share-square-o" aria-hidden="true"></i> <span class="text-info">39 Shares</span>
-</li>
-<li class="list-inline-item">
-<i class="fa fa-tags" aria-hidden="true"></i>
-<span>Interact</span>
-<span class="badge badge-dark">Like</span>
-<span class="badge badge-dark">Share</span>
 
-</li>
-</ul>
 </div>
 </div>
 </div>
@@ -127,9 +80,6 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 <div class="row">
 <div class="col-lg-12 col-sm-12 col-12">
 <div class="row">
-<div class="col-lg-2 col-sm-2 col-5">
-<img src="https://dummyimage.com/150x150/5a5a5a/ffffff" class="img-thumbnail" width="150px">
-</div>
 <div class="col-lg-10 col-sm-10 col-7">
 
 </section>
@@ -143,32 +93,16 @@ quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 </p>
-<button class="btn btn-sm btn-dark">Read more</button>
+<button  id = "pbtn" class="btn btn-sm btn-dark">Create New Post</button>
+<button id = "editbtn"class="btn btn-sm btn-dark">Edit Post</button>
+<button id = "deletebtn"class="btn btn-sm btn-dark">Delete Post</button>
+
+
 </div>
 </div>
 <div class="row post-detail">
 <div class="col-lg-12 col-sm-12 col-12">
-<ul class="list-inline">
-<li class="list-inline-item">
-<img src="https://dummyimage.com/20x20/a8a1a8/0f0f12" class="rounded-circle" width="20px"> <span>by</span> <span class="text-info">Lisa</span>
-</li>
-<li class="list-inline-item">
-<i class="fa fa-calendar" aria-hidden="true"></i> <span>Sept 16th,2017</span>
-</li>
-<li class="list-inline-item">
-<i class="fa fa-comment" aria-hidden="true"></i> <span class="text-info">3 Comments</span>
-</li>
-<li class="list-inline-item">
-<i class="fa fa-share-square-o" aria-hidden="true"></i> <span class="text-info">39 Shares</span>
-</li>
-<li class="list-inline-item">
-<i class="fa fa-tags" aria-hidden="true"></i>
-<span>Interact</span>
-<span class="badge badge-dark">Like</span>
-<span class="badge badge-dark">Share</span>
 
-</li>
-</ul>
 </div>
 </div>
 </div>
@@ -176,4 +110,7 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 </div>
 </section>
 </body>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+30JU5yEx1q6GSYGSHk7tPXikyn57ogEvDej/m4=" crossorigin="anonymous"></script>
+ <script src="app.js"></script>
 </html>
