--- a/feedsec.html
+++ b/feedsec.html
@@ -25,18 +25,15 @@
 <div class="row">
 
 <div class="col-lg-10 col-sm-10 col-7">
-<h4 class="text" >Living the Life</h4>
+<h4 class="text" ></h4>
 <br>
 <p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-</p>
 <button  id = "pbtn" class="btn btn-sm btn-dark">Create New Post</button>
 <button id = "editbtn"class="btn btn-sm btn-dark">Edit Post</button>
 <button id="deletebtn" class="btn btn-sm btn-dark">Delete Post</button>
+<button type="button" id = "gtbtn" class="btn btn-sm btn-dark">Get Button</button>
+</p>
+
 </div>
 </div>
 <div class="row post-detail">
@@ -55,62 +52,11 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 
 
 
-<section>
-<h4 class="text">Twitter Treason</h4>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-</p>
-<button  id = "pbtn" class="btn btn-sm btn-dark">Create New Post</button>
-<button id = "editbtn"class="btn btn-sm btn-dark">Edit Post</button>
-<button id = "deletebtn" class="btn btn-sm btn-dark">Delete Post</button>
-</div>
-</div>
-<div class="row post-detail">
-<div class="col-lg-12 col-sm-12 col-12">
-
-</div>
-</div>
-</div>
-</div>
-<hr>
-<div class="row">
-<div class="col-lg-12 col-sm-12 col-12">
-<div class="row">
-<div class="col-lg-10 col-sm-10 col-7">
-
-</section>
-
-<section>
-<h4 class="text">Crazy Post</h4>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-</p>
-<button  id = "pbtn" class="btn btn-sm btn-dark">Create New Post</button>
-<button id = "editbtn"class="btn btn-sm btn-dark">Edit Post</button>
-<button id = "deletebtn"class="btn btn-sm btn-dark">Delete Post</button>
 
 
-</div>
-</div>
-<div class="row post-detail">
-<div class="col-lg-12 col-sm-12 col-12">
 
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
 </body>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+30JU5yEx1q6GSYGSHk7tPXikyn57ogEvDej/m4=" crossorigin="anonymous"></script>
+<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
  <script src="app.js"></script>
 </html>
