changing files adding logic progressively

--- a/feedsec.html
+++ b/feedsec.html
@@ -32,7 +32,10 @@
 <button id = "editbtn"class="btn btn-sm btn-dark">Edit Post</button>
 <button id="deletebtn" class="btn btn-sm btn-dark">Delete Post</button>
 <button type="button" id = "gtbtn" class="btn btn-sm btn-dark">Get Button</button>
+<section id="userAppend"></section>
 </p>
+
+
 
 </div>
 </div>
