--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1>Login Here</h1>
       </p>
     <img class="img" src="https://cdn.skedsocial.com/app/uploads/2021/08/03140952/jan-baborak-ZKOwF_J-3rw-unsplash-scaled-1-600x360.jpg" alt="Image of Hashtag Symbol">
-<form action="file:///Users/dj/Documents/TrendyX/feedsec.html">
+<form action="file:/Users/dj/Documents/TrendyX/feedsec.html?username=&password=">
 
 <p>
             <label for="username">Enter Username:</label>
@@ -39,7 +39,7 @@
         <button class="button">Sign In</button>
         
 </form>
-<form class= "button2"action="///Users/dj/Documents/TrendyX/TrendyX/signup.html"
+<form class= "button2"action="///Users/dj/Documents/TrendyX/signup.html"
     <input type="button"><button>Sign Up</button>
   </form>
         
