--- a/feedsec.html
+++ b/feedsec.html
@@ -19,15 +19,8 @@
 
 
 
-<div class="container main-section">
-<div class="row">
-<div class="col-lg-12 col-sm-12 col-12">
-<div class="row">
 
-<div class="col-lg-10 col-sm-10 col-7">
-<h4 class="text" ></h4>
-<br>
-<p>
+  <p>
 <button  id = "pbtn" class="btn btn-sm btn-dark">Create New Post</button>
 <button id = "editbtn"class="btn btn-sm btn-dark">Edit Post</button>
 <button id="deletebtn" class="btn btn-sm btn-dark">Delete Post</button>
@@ -37,21 +30,7 @@
 
 
 
-</div>
-</div>
-<div class="row post-detail">
-<div class="col-lg-12 col-sm-12 col-12">
 
-</div>
-</div>
-</div>
-</div>
-<hr>
-<div class="row">
-<div class="col-lg-12 col-sm-12 col-12">
-<div class="row">
-
-<div class="col-lg-10 col-sm-10 col-7">
 
 
 
@@ -59,7 +38,7 @@
 
 
 </body>
-<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
  <script src="app.js"></script>
 </html>
