working on post button

--- a/feedsec.html
+++ b/feedsec.html
@@ -14,7 +14,7 @@
       <a href="feedsec.html" class="navbar-brand">TrendyX</a>
         <a href="feedsec.html"class="navbar-brand">News Feed</a>
 <!--<a href="signup.html"class="navbar-brand">Trendy Sign Up</a>-->
-        <a href="signin.html"class="navbar-brand">Logout</a>
+        <a href="index.html"class="navbar-brand">Logout</a>
 </nav>
 <p>
 <button  id = "pbtn" class="btn btn-sm btn-dark">Create New Post</button>
