--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <input id = password type="password" name="password">
         </p>
 
-        <button class="button">Sign In</button>
+        <button id = "signinbtn"class="button" onclick="inputVal()">Sign In</button>
         
 </form>
 <form class= "button2"action="///Users/dj/Documents/TrendyX/signup.html"
