--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <img class="img" src="https://cdn.skedsocial.com/app/uploads/2021/08/03140952/jan-baborak-ZKOwF_J-3rw-unsplash-scaled-1-600x360.jpg" alt="Image of Hashtag Symbol">
 
 <br>
-    <label for="username">Enter Username</label>
-    <label for="password">, and Password:</label>
+    <label for="username">Username</label>
+    <label for="password">Password:</label>
     <input type="text" placeholder="Username" id="loginInput" required>
     <input id = password type="password" placeholder = "Password"name="password">
     <br>
